Added replacement string

--- a/AppOverview.json
+++ b/AppOverview.json
@@ -202,7 +202,7 @@
     "timeframe": null,
     "managementZone": null
    },
-   "markdown": "## [MyFunnel Overview](#dashboard;id=6e481cc8-bea9-46ba-b1f8-23ebcc1da313)"
+   "markdown": "![Funnel Links]()\n## [MyFunnel Overview](#dashboard;id=6e481cc8-bea9-46ba-b1f8-23ebcc1da313)"
   },
  {
    "name": "Markdown",
